--- a/package.json
+++ b/package.json
@@ -20,14 +20,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gongshun/qiankun-vue-demo.git"
+    "url": "git+https://github.com/yijunsong-budidiao/qiankun-vue.git"
   },
-  "author": "gongshun",
+  "author": "yijunsong",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/gongshun/qiankun-vue-demo/issues"
-  },
-  "homepage": "https://github.com/gongshun/qiankun-vue-demo#readme",
   "devDependencies": {
     "npm-run-all": "^4.1.5"
   }
